Destructured only join method from path module Added fixed height of 600px to main image to prevent it from collapsing when expanded Added onkeypress handler functions to StyleSelector and ThumbnailView Uninstalled superfluous zlib module Added webpack bundles to gitignore.

--- a/client/css/ImageGallery.scss
+++ b/client/css/ImageGallery.scss
@@ -5,7 +5,7 @@
   flex: 2;
   padding: 30px;
   transition: background-position 850ms;
-
+  height: 600px;
 
   &__navigation {
     align-items: center;
